--- a/app/Untitled.ipynb
+++ b/app/Untitled.ipynb
@@ -23,35 +23,52 @@
       " * Running on http://127.0.0.1:5001\n",
       " * Running on http://192.168.50.51:5001\n",
       "Press CTRL+C to quit\n",
-      "127.0.0.1 - - [04/Oct/2025 19:24:53] \"POST /api/log_query HTTP/1.1\" 200 -\n",
-      "[2025-10-04 19:24:53,392] INFO in fancoolserver: [like_status] uid=b3837f08-f90f-405c-92de-9bc36e5ef97c ip=127.0.0.1 raw=1 dedup=1 liked=1 sample=['1_1'] time=2ms\n",
-      "127.0.0.1 - - [04/Oct/2025 19:24:53] \"POST /api/like_status HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Oct/2025 19:24:53] \"POST /api/curves HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Oct/2025 19:24:57] \"POST /api/log_query HTTP/1.1\" 200 -\n",
-      "[2025-10-04 19:24:57,054] INFO in fancoolserver: [like_status] uid=b3837f08-f90f-405c-92de-9bc36e5ef97c ip=127.0.0.1 raw=1 dedup=1 liked=1 sample=['2_2'] time=2ms\n",
-      "127.0.0.1 - - [04/Oct/2025 19:24:57] \"POST /api/like_status HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Oct/2025 19:24:57] \"POST /api/curves HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Oct/2025 19:25:24] \"POST /api/log_query HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Oct/2025 19:25:24] \"POST /api/curves HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Oct/2025 19:25:25] \"POST /api/log_query HTTP/1.1\" 200 -\n",
-      "[2025-10-04 19:25:25,872] INFO in fancoolserver: [like_status] uid=b3837f08-f90f-405c-92de-9bc36e5ef97c ip=127.0.0.1 raw=1 dedup=1 liked=1 sample=['5_2'] time=2ms\n",
-      "127.0.0.1 - - [04/Oct/2025 19:25:25] \"POST /api/like_status HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Oct/2025 19:25:25] \"POST /api/curves HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Oct/2025 19:25:29] \"POST /api/log_query HTTP/1.1\" 200 -\n",
-      "[2025-10-04 19:25:29,995] INFO in fancoolserver: [like_status] uid=b3837f08-f90f-405c-92de-9bc36e5ef97c ip=127.0.0.1 raw=1 dedup=1 liked=1 sample=['4_1'] time=3ms\n",
-      "127.0.0.1 - - [04/Oct/2025 19:25:29] \"POST /api/like_status HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Oct/2025 19:25:29] \"POST /api/curves HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Oct/2025 19:25:31] \"POST /api/log_query HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Oct/2025 19:25:31] \"POST /api/curves HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Oct/2025 19:25:32] \"POST /api/log_query HTTP/1.1\" 200 -\n",
-      "[2025-10-04 19:25:32,758] INFO in fancoolserver: [like_status] uid=b3837f08-f90f-405c-92de-9bc36e5ef97c ip=127.0.0.1 raw=1 dedup=1 liked=1 sample=['7_2'] time=1ms\n",
-      "127.0.0.1 - - [04/Oct/2025 19:25:32] \"POST /api/like_status HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [04/Oct/2025 19:25:32] \"POST /api/curves HTTP/1.1\" 200 -\n",
-      "64.62.156.10 - - [04/Oct/2025 20:09:01] code 400, message Bad HTTP/0.9 request type ('\\x16\\x03\\x01\\x00{\\x01\\x00\\x00w\\x03\\x03@dÒôiñ1ÕXz\\x13©a©\\x8bwZb5¦tàI1\\x92\\x84?Ù!!\\\\Ç\\x00\\x00\\x1aÀ/À+À\\x11À\\x07À\\x13À')\n",
-      "64.62.156.10 - - [04/Oct/2025 20:09:01] \"\\x16\\x03\\x01\\x00{\\x01\\x00\\x00w\\x03\\x03@dÒôiñ1ÕXz\\x13©a©\\x8bwZb5¦tàI1\\x92\\x84?Ù!!\\\\Ç\\x00\\x00\\x1aÀ/À+À\\x11À\\x07À\\x13À\\x09À\\x14À\" 400 -\n",
-      "91.231.89.215 - - [04/Oct/2025 20:34:28] code 400, message Bad request version ('À#À¬À®À+À')\n",
-      "91.231.89.215 - - [04/Oct/2025 20:34:28] \"\\x16\\x03\\x03\\x01§\\x01\\x00\\x01£\\x03\\x03\\x0d#ð­\\x948Î\\x10\\x17ÈÑ+\\x9fôè#\\x0d¨³\\x12ÿð\\x83¶+1Ìð½\\x1b°¦ ÿ\\x94¬\\x1dI#úù5²ÐÓ-ùóâÚ\\x07\\x8a)l\\x9aï.÷\\x91÷'è\\x13\\x11+\\x00\\x8a\\x00\\x16\\x003\\x00gÀ\\x9eÀ¢\\x00\\x9e\\x009\\x00kÀ\\x9fÀ£\\x00\\x9f\\x00E\\x00¾\\x00\\x88\\x00Ä\\x00\\x9aÀ\\x08À\\x09À#À¬À®À+À\" 400 -\n",
-      "91.231.89.213 - - [04/Oct/2025 20:34:32] \"GET / HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [04/Oct/2025 22:51:28] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:28] \"GET /static/css/fancool.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:28] \"GET /static/js/local-state.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:28] \"GET /static/js/fancool.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:28] \"GET /static/echarts-render.html HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:28] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:28] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:28] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:28] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:30] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:35] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:35] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:35] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:35] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:36] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:38] \"POST /api/like HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:38] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:45] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:45] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:46] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:46] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:47] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:47] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:50] \"GET /get_resistance_locations_by_type/多孔板(40%25穿孔率) HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:52] \"POST /api/search_fans HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:54] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:54] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:54] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:51:59] \"GET /search_models/model HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:52:00] \"GET /get_models/品牌1 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:52:00] \"GET /get_resistance_types/品牌1/model2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:52:03] \"POST /api/search_fans HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:52:03] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:52:03] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:54:41] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:54:41] \"GET /static/css/fancool.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:54:41] \"GET /static/js/local-state.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:54:41] \"GET /static/js/fancool.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:54:41] \"GET /static/echarts-render.html HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:54:41] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:54:41] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:54:41] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:54:41] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 22:54:44] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 23:00:41] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [04/Oct/2025 23:06:41] \"POST /api/like_status HTTP/1.1\" 200 -\n"
      ]
     }
    ],
