--- a/app/Untitled.ipynb
+++ b/app/Untitled.ipynb
@@ -1948,7 +1948,55 @@
       "127.0.0.1 - - [05/Oct/2025 01:13:41] \"POST /api/curves HTTP/1.1\" 200 -\n",
       "127.0.0.1 - - [05/Oct/2025 01:13:41] \"POST /api/like_status HTTP/1.1\" 200 -\n",
       "127.0.0.1 - - [05/Oct/2025 01:13:41] \"GET /api/query_count HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [05/Oct/2025 01:13:41] \"GET /api/top_ratings HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [05/Oct/2025 01:13:41] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:13:42] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:13:43] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:13:43] \"GET /static/css/fancool.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:13:43] \"GET /static/echarts-render.html HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:13:43] \"GET /static/js/local-state.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:13:43] \"GET /static/js/fancool.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:13:43] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:13:43] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:13:43] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:13:44] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:13:44] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:13:45] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:19:41] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:19:44] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:46] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:46] \"GET /static/css/fancool.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:46] \"GET /static/js/local-state.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:46] \"GET /static/js/fancool.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:47] \"GET /static/echarts-render.html HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:48] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:48] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:48] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:48] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:48] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:49] \"GET /static/logo.png HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:53] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:53] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:54] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:54] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:56] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:56] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:57] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:57] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:58] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:58] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:58] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:22:58] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:23:00] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:23:10] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:23:10] \"GET /static/css/fancool.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:23:10] \"GET /static/js/local-state.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:23:10] \"GET /static/js/fancool.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:23:10] \"GET /static/echarts-render.html HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:23:10] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:23:10] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:23:10] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:23:10] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:23:10] \"GET /api/top_ratings HTTP/1.1\" 200 -\n"
      ]
     }
    ],
