--- a/app/Untitled.ipynb
+++ b/app/Untitled.ipynb
@@ -1996,7 +1996,24 @@
       "127.0.0.1 - - [05/Oct/2025 01:23:10] \"POST /api/like_status HTTP/1.1\" 200 -\n",
       "127.0.0.1 - - [05/Oct/2025 01:23:10] \"POST /api/curves HTTP/1.1\" 200 -\n",
       "127.0.0.1 - - [05/Oct/2025 01:23:10] \"GET /api/query_count HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [05/Oct/2025 01:23:10] \"GET /api/top_ratings HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [05/Oct/2025 01:23:10] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:02] \"GET / HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:02] \"GET /static/js/local-state.js HTTP/1.1\" 304 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:02] \"GET /static/css/fancool.css HTTP/1.1\" 304 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:02] \"GET /static/js/fancool.js HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:02] \"GET /static/echarts-render.html HTTP/1.1\" 304 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:02] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:02] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:02] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:02] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:02] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:12] \"POST /api/theme HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:33] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:33] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:35] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:35] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:36] \"POST /api/theme HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:41] \"POST /api/log_query HTTP/1.1\" 200 -\n"
      ]
     }
    ],
