--- a/app/Untitled.ipynb
+++ b/app/Untitled.ipynb
@@ -2013,7 +2013,114 @@
       "192.168.50.159 - - [05/Oct/2025 01:25:35] \"POST /api/log_query HTTP/1.1\" 200 -\n",
       "192.168.50.159 - - [05/Oct/2025 01:25:35] \"POST /api/curves HTTP/1.1\" 200 -\n",
       "192.168.50.159 - - [05/Oct/2025 01:25:36] \"POST /api/theme HTTP/1.1\" 200 -\n",
-      "192.168.50.159 - - [05/Oct/2025 01:25:41] \"POST /api/log_query HTTP/1.1\" 200 -\n"
+      "192.168.50.159 - - [05/Oct/2025 01:25:41] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:41] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:42] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:42] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:42] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:42] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:43] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:43] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:25:51] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:29:11] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:20] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:20] \"GET /static/css/fancool.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:20] \"GET /static/js/local-state.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:20] \"GET /static/js/fancool.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:20] \"GET /static/echarts-render.html HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:20] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:20] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:20] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:20] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:20] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:27] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:27] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:35] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:35] \"GET /static/css/fancool.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:35] \"GET /static/js/local-state.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:35] \"GET /static/js/fancool.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:35] \"GET /static/echarts-render.html HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:35] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:35] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:35] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:35] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:35] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:37] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:37] \"GET /static/css/fancool.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:37] \"GET /static/echarts-render.html HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:37] \"GET /static/js/local-state.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:37] \"GET /static/js/fancool.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:37] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:37] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:37] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:37] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:37] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:38] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:38] \"GET /static/css/fancool.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:38] \"GET /static/js/local-state.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:38] \"GET /static/echarts-render.html HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:38] \"GET /static/js/fancool.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:38] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:38] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:38] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:38] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:34:38] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:01] \"GET /get_models/品牌2 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:02] \"GET /get_resistance_types/品牌2/model3 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:04] \"POST /api/search_fans HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:04] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:04] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:06] \"GET /get_resistance_locations_by_type/冷排(27mm) HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:08] \"POST /api/search_fans HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:16] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:16] \"GET /static/css/fancool.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:16] \"GET /static/js/local-state.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:16] \"GET /static/js/fancool.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:16] \"GET /static/echarts-render.html HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:16] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:16] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:16] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:16] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:16] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:17] \"GET /static/logo.png HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:19] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:35:19] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:40:25] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:40:26] \"GET /static/css/fancool.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:40:26] \"GET /static/js/local-state.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:40:26] \"GET /static/js/fancool.js HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:40:26] \"GET /static/echarts-render.html HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:40:26] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:40:26] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:40:26] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:40:26] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:40:26] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:40:26] \"POST /api/visit_start HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:40:31] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:36] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:46] \"GET / HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:46] \"GET /static/css/fancool.css HTTP/1.1\" 304 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:46] \"GET /static/js/local-state.js HTTP/1.1\" 304 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:46] \"GET /static/js/fancool.js HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:46] \"GET /static/echarts-render.html HTTP/1.1\" 304 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:46] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:46] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:46] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:46] \"POST /api/visit_start HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:46] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:46] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:48] \"GET / HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:48] \"GET /static/css/fancool.css HTTP/1.1\" 304 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:48] \"GET /static/js/local-state.js HTTP/1.1\" 304 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:48] \"GET /static/js/fancool.js HTTP/1.1\" 304 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:48] \"GET /static/echarts-render.html HTTP/1.1\" 304 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:48] \"GET /api/config HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:48] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:48] \"POST /api/like_status HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:48] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:40:48] \"GET /api/query_count HTTP/1.1\" 200 -\n",
+      "192.168.50.159 - - [05/Oct/2025 01:41:07] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [05/Oct/2025 01:46:26] \"POST /api/like_status HTTP/1.1\" 200 -\n"
      ]
     }
    ],
