--- a/app/Untitled.ipynb
+++ b/app/Untitled.ipynb
@@ -962,7 +962,33 @@
       "127.0.0.1 - - [06/Oct/2025 00:25:32] \"POST /api/curves HTTP/1.1\" 200 -\n",
       "127.0.0.1 - - [06/Oct/2025 00:25:33] \"POST /api/like HTTP/1.1\" 200 -\n",
       "127.0.0.1 - - [06/Oct/2025 00:25:34] \"GET /api/top_ratings HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [06/Oct/2025 00:25:34] \"GET /api/recent_likes HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [06/Oct/2025 00:25:34] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:36] \"POST /api/like HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:36] \"GET /api/recent_likes HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:41] \"GET /search_models/model?raw=1 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:41] \"GET /get_models/品牌2?raw=1 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:42] \"GET /get_resistance_types/品牌2/model3?raw=1 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:43] \"POST /api/search_fans HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:44] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:44] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:47] \"GET /get_resistance_locations_by_type/多孔板(40%25穿孔率)?raw=1 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:49] \"POST /api/search_fans HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:50] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:50] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:51] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:52] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:25:52] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:26:23] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:26:23] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:26:23] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:26:23] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:26:23] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:26:23] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:26:23] \"POST /api/log_query HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:26:23] \"POST /api/curves HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:26:40] \"GET /static/css/fancool.css HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:26:40] \"GET /.well-known/appspecific/com.chrome.devtools.json HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [06/Oct/2025 00:26:59] \"GET /.well-known/appspecific/com.chrome.devtools.json HTTP/1.1\" 404 -\n"
      ]
     }
    ],
